# NettHandsHomecare

./: .env.vault  .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
NettHandsHomeCare/: DB_Sandbox  Dockerfile  README.md  deploy.sh  entrypoint.sh  gunicorn-cfg.py  gunicorn.conf.py  manage.py  nginx.conf  offline-db  package-lock.json  package.json  prod_netthandshomecare  pyproject.toml  requirements.txt
NettHandsHomeCare/NettHandsHomeCare/: asgi.py  gcsUtils.py  settings.py  urls.py  wsgi.py
NettHandsHomeCare/announcements/: forms.py  models.py  urls.py  views.py
NettHandsHomeCare/announcements/migrations/: 0001_initial.py  0002_initial.py
NettHandsHomeCare/assets/css/: argon.css
NettHandsHomeCare/authentication/: admin.py  urls.py  views.py
NettHandsHomeCare/compliance/: forms.py  models.py  storage.py  urls.py  views.py
NettHandsHomeCare/compliance/migrations/: 0001_initial.py  0002_initial.py
NettHandsHomeCare/employee/: forms.py  models.py  urls.py  views.py
NettHandsHomeCare/employee/migrations/: 0001_initial.py
NettHandsHomeCare/portal/: admin.py  config.py  forms.py  models.py  tests.py  urls.py  views.py
NettHandsHomeCare/portal/migrations/: 0001_initial.py  0002_alter_employee_city_and_more.py  (+17 more)
NettHandsHomeCare/templates/: about.html  client-interest.html  employee-interest.html  index.html  portfolio.html  services.html  submission.html
NettHandsHomeCare/web/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
nginx/: nginx.conf
(+47 files in other folders)
