[tool.poetry]
name = "netthandshomecare"
version = "0.1.0"
description = "Front-End website and web application for Nett Hands Homecare"
authors = ["Terry Brooks, Jr. <Terry.Arthur@BrooksJr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
django-crispy-forms = "^2.0"
crispy-bootstrap4 = "^2022.1"
pendulum = "^2.1.2"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.1.0"}
django-localflavor = "^4.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
pre-commit = "^3.3.3"
black = "^23.3.0"
djlint = "^1.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
